fix(desktop): adjust spacing and resolve text/image overlapping issues

--- a/src/app/main-content/portfolio/project-card/project-card.component.scss
+++ b/src/app/main-content/portfolio/project-card/project-card.component.scss
@@ -135,7 +135,7 @@
   max-width: 1920px;
   height: 656px;
   margin: 0 96px;
-  padding: 56px 80px;
+  padding: 48px 56px;
   border: 1px solid rgb(61, 207, 182);
   border-radius: 30px;
   display: flex;
@@ -144,49 +144,53 @@
 }
 
 .left-container-content {
+  height: 100%;
   width: 50%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 
-  > h1 {
-    font-family: "Karla";
-    font-size: 128px;
-    font-weight: 700;
-    line-height: 100px;
-    letter-spacing: -0.02em;
-    color: rgb(61, 207, 182);
-    margin-bottom: 24px;
+    > .info-container {
+      > h1 {
+        font-family: "Karla";
+        font-size: 128px;
+        font-weight: 700;
+        line-height: 100px;
+        letter-spacing: -0.02em;
+        color: rgb(61, 207, 182);
+        margin-bottom: 24px;
+      }
+
+      > h2 {
+        font-family: "Fira Code";
+        font-size: 64px;
+        font-weight: 700;
+        line-height: 51.2px;
+        letter-spacing: -0.03em;
+        color: white;
+        margin-bottom: 40px;
+      }
+
+      > p {
+        font-family: "Fira Code";
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 28.8px;
+        color: rgb(61, 207, 182);
+        margin-bottom: 20px;
+      }
+
+      > span {
+        font-family: "Karla";
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 21.6px;
+        color: white;
+      }
   }
 
-  > h2 {
-    font-family: "Fira Code";
-    font-size: 64px;
-    font-weight: 700;
-    line-height: 51.2px;
-    letter-spacing: -0.03em;
-    color: white;
-    margin-bottom: 40px;
-  }
-
-  > p {
-    font-family: "Fira Code";
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 28.8px;
-    color: rgb(61, 207, 182);
-    margin-bottom: 20px;
-  }
-
-  > span {
-    font-family: "Karla";
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 21.6px;
-    color: white;
-    margin-bottom: 32px;
-  }
-
-  > .technologies-container {
+  > .tech-and-buttons-container {
+    > .technologies-container {
     display: flex;
     align-items: center;
     gap: 16px;
@@ -246,6 +250,7 @@
         transition: all 125ms ease-in-out;
       }
     }
+  }
   }
 }
 
@@ -327,8 +332,6 @@
 }
 
 .in-development {
-  // filter: grayscale(1) opacity(0.6);
-  // pointer-events: none;
   display: none;
 }
 
